my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: “true”
spec:
  rules:
  - host: authentication.columbusecosystem.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: authentication
          servicePort: 8000
  - host: api.cdrive.columbusecosystem.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: cdrive
          servicePort: 8000
  - host: cdrive.columbusecosystem.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: cdrive-ui
          servicePort: 80
  - host: value-normalizer.columbusecosystem.com
    http:
      paths: 
      - path: /api/value_normalizer
        backend:
          serviceName: value-normalizer
          servicePort: 8080
      - path: /
        backend:
          serviceName: normalizer-ui
          servicePort: 80
  tls:
  - secretName: tls-staging-cert
    hosts:
    - authentication.columbusecosystem.com
    - api.cdrive.columbusecosystem.com
    - cdrive.columbusecosystem.com
    - value-normalizer.columbusecosystem.com
